finish oauth2 for GitHub